| Bug #9102 | Stored proccedures: function which returns blob causes crash | ||
|---|---|---|---|
| Submitted: | 10 Mar 2005 20:34 | Modified: | 22 Apr 2005 20:39 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.3-alpha-debug-log | OS: | Linux (SUSE 9.2) |
| Assigned to: | Bugs System | Target Version: | |
[10 Mar 2005 20:34]
Peter Gulutzan
[10 Mar 2005 20:38]
Miguel Solorzano
Thank you for the bug report.
[19 Apr 2005 10:20]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24128
[21 Apr 2005 16:49]
Antony Curtis
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
[21 Apr 2005 16:50]
Antony Curtis
Fixed for 5.0.5
[22 Apr 2005 20:39]
Paul DuBois
Noted in 5.0.5 changelog.
